--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "cero",
   "private": true,
+  "scripts": {
+    "start": "rails s -b 0.0.0.0"
+  },
   "dependencies": {
+    "@babel/preset-react": "^7.0.0",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
-    "turbolinks": "^5.2.0"
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "prop-types": "15.7.2",
+    "react": "16.10.2",
+    "react-dom": "16.10.2",
+    "react-router-dom": "5.1.2",
+    "axios": "0.19.0"
   },
   "version": "0.1.0",
   "devDependencies": {
